# Tennis_ML_Lite

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  debug_polars.py  docker-compose.yml  features.py  main.py  model.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_daily.bat  scraper.py  sofascore_monitor.db  tennis.py  tennis_app_analysis.md
.agent/rules/: hrm-reasoning.md
.github/workflows/: ci.yaml  ci.yml  evaluate.yml  promote.yml  train.yml
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  _random.data.json  _random.meta.json  (+196 more)
.streamlit/: config.toml
config/: __init__.py  features.yaml  serving.json  settings.py
dashboard/: app.py  player_history_tab.py
dashboards/: bankroll_tracker.json  model_performance.json  scraper_health.json
data/: player_update_state.json  tennis.parquet  upcoming.parquet  value_bet_history.json
docs/: PORTFOLIO_REPORT.md  SPORT_REPLICATION_BLUEPRINT.md  ai_review_request.md  architecture.md  backtesting.md  betting.md  features.md  model.md  tech_stack_overview.md
models/: active_model.meta.json  registry.json
pages/: 1_Predictions.py  2_Tournament.py  3_Performance.py
results/: model_audit_report.json  model_audit_report.md  showdown_Australian_Open_2023.html  showdown_US_Open_2024.html  showdown_Wimbledon_2024.html
scripts/: analyze_tournaments.py  backtest.py  backtest_favorite_edge.py  backtest_roi_analysis.py  backtest_strict.py  check_calibration.py  compute_data_hash.py  fit_calibrator.py  model_audit.py  optimize_model.py  predict_upcoming.py  run_pipeline.py  scrape_atp.py  scrape_future.py  stress_test.py  test_update_workflow.py  update_active_players.py  update_data.py  verify_shap.py  verify_stacking.py
src/: exceptions.py  pipeline.py  schema.py  scraper.py
tests/: conftest.py
(+652 files in other folders)
